# cs454-2d-game-engine-sonic

./: .gitignore  CMakeLIsts.txt  README.md
app/: CMakeLists.txt  main.cpp  sonic.cpp  sonic.h
app/assets/config/: audio.json  game.json  input.json  player.json  render.json  window.json
app/gameStates/: stateManager.cpp  stateManager.h
engine/: CMakeLists.txt  bitmap.cpp  bitmap.h
engine/core/: app.cpp  app.h  game.cpp  game.h
engine/core/audio/: audio.cpp  audio.h
engine/core/config/: config.cpp  config.h
engine/render/: bitmap.cpp  bitmap.h  renderer.cpp  renderer.h
